Fixes style and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -30,17 +30,18 @@ header {
 
 header img {
   display: block;
+  padding: 1rem;
 }
 
 header h1 {
+  position: absolute;
+  transform: translate(10%, 410%);
   width: 14rem;
-  bottom: 0;
-  left: 0;
 }
 
 header nav {
-  top: 0;
-  right: 0;
+  position: absolute;
+  transform: translate(100%, -511%);
 }
 
 /* header {
@@ -88,6 +89,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 1rem;
+  margin-top: 0;
   padding: 0;
   grid-gap: 1rem;
 }
